--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "jwt-decode": "^3.1.2",
+    "multer": "^1.4.5-lts.1",
     "next": "13.1.1",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-uploader": "^3.0.2",
     "typescript": "4.9.4",
     "uuidv4": "^6.2.13",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
