--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/analytics": "^0.9.0",
+    "@firebase/app": "^0.9.0",
+    "@firebase/storage": "^0.10.0",
     "@leecheuk/react-google-login": "^5.4.1",
     "@next/font": "13.1.1",
     "@react-oauth/google": "^0.5.1",
@@ -16,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.1.2",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
@@ -24,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.1.1",
     "next-connect": "^0.13.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
